--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ mkdocs = "^1.3.0"
 pytest = "^5.2"
 
 [tool.poetry.scripts]
-cat-merge = 'cat_merge.cli:merge'
+cat-merge = 'cat_merge.merge:merge'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
