--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,12 +19,14 @@ jobs:
             - name: Install dependencies
               run: |
                   pip install poetry && poetry install
+
             - name: Build
               run: |
 	              poetry build
+
             - name: Publish to PyPi
               env:
                   PYPI_USERNAME: @token
                   PYPI_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
               run: |
-                  poetry build && poetry publish
+                  poetry publish
