--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cat-merge"
-version = "0.1.12"
+version = "0.1.13"
 description = ""
 authors = [
     "Monarch Initiative <info@monarchinitiative.org>",
@@ -12,6 +12,7 @@ authors = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
+click = "^8"
 pandas = "^1.4.2"
 mkdocs = "^1.3.0"
 
@@ -19,7 +20,7 @@ mkdocs = "^1.3.0"
 pytest = "^6.2.4"
 
 [tool.poetry.scripts]
-cat-merge = 'cat_merge.merge:merge'
+cat-merge = 'cat_merge.cli:main'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
