--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ python = ">=3.8,<3.11"
 click = "^8"
 pandas = "^1.4.2"
 mkdocs = "^1.3.0"
-grape = "^0.1.24"
+#grape = "^0.1.24"
 scipy = "^1.9.1"
 
 [tool.poetry.dev-dependencies]
