--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.11"
+python = "^3.10"
 click = "^8"
 pandas = "^1.4.2"
 mkdocs = "^1.3.0"
