--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,10 @@ authors = [
 [tool.poetry.dependencies]
 python = "^3.10"
 click = "^8"
-pandas = ">=1.4.2,<3.0.0"
+pandas = "2.0.3"
 mkdocs = "^1.3.0"
 #grape = "^0.1.24"
-scipy = ">=1.9.1,<3.0.0"
+scipy = ">=1.9,<2.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
