--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,8 @@ authors = [
 [tool.poetry.dependencies]
 python = "^3.10"
 click = "^8"
-pandas = "2.0.3"
+pandas = ">=1.4.6,<2.1.0"
 mkdocs = "^1.3.0"
-#grape = "^0.1.24"
 scipy = ">=1.9,<2.0.0"
 
 [tool.poetry.dev-dependencies]
