added schema support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pandas = ">=2.0.0,<3.0.0"
 duckdb = ">=1.0.0"
 mkdocs = "^1.3.0"
 scipy = ">=1.9,<2.0.0"
+linkml-runtime = "^1.7.0"
+pyyaml = "^6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
